--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
 </head>
 
-<body>
+<body ng-app="todoApp" ng-controller="TodoController">
     <section class="todoapp">
         <header class="header">
             <h1>todos</h1>
-            <input class="new-todo" placeholder="What needs to be done?" autofocus>
+            <form ng-submit="add()">
+                <input class="new-todo" placeholder="What needs to be done?" autofocus ng-model="addname">
+
+            </form>
         </header>
         <!-- This section should be hidden by default and shown when there are todos -->
         <section class="main">
@@ -22,21 +25,16 @@
             <ul class="todo-list">
                 <!-- These are here just to show the structure of the list items -->
                 <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-                <li class="completed">
+                <li ng-repeat="todo in todoList | filter :{isCompleted:status} track by $index" ng-class="{completed:todo.isCompleted,editing:todo.id === editingId}">
                     <div class="view">
-                        <input class="toggle" type="checkbox" checked>
-                        <label>Taste JavaScript</label>
-                        <button class="destroy"></button>
+                        <input class="toggle" type="checkbox" checked ng-model="todo.isCompleted">
+                        <label ng-bind="todo.name" ng-dblclick="edit(todo.id)"></label>
+                        <!--在ng-click-->
+                        <button class="destroy" ng-click="remove(todo.id)"></button>
                     </div>
-                    <input class="edit" value="Create a TodoMVC template">
-                </li>
-                <li>
-                    <div class="view">
-                        <input class="toggle" type="checkbox">
-                        <label>Buy a unicorn</label>
-                        <button class="destroy"></button>
-                    </div>
-                    <input class="edit" value="Rule the web">
+                    <form ng-submit="update()">
+                        <input class="edit" ng-model="todo.name">
+                    </form>
                 </li>
             </ul>
         </section>
@@ -47,17 +45,17 @@
             <!-- Remove this if you don't implement routing -->
             <ul class="filters">
                 <li>
-                    <a class="selected" href="#/">All</a>
+                    <a ng-class="{selected:status === undefined }" href="#/" ng-click="showAll()">All</a>
                 </li>
                 <li>
-                    <a href="#/active">Active</a>
+                    <a ng-class="{selected:status === false }" href="#/active" ng-click="showActive()">Active</a>
                 </li>
                 <li>
-                    <a href="#/completed">Completed</a>
+                    <a ng-class="{selected:status === true }" href="#/completed" ng-click="showCompleted()">Completed</a>
                 </li>
             </ul>
             <!-- Hidden if no completed items are left ↓ -->
-            <button class="clear-completed">Clear completed</button>
+            <button class="clear-completed" ng-click="clearCompleted()">Clear completed</button>
         </footer>
     </section>
     <footer class="info">
@@ -65,6 +63,7 @@
         <p>Created by <a href="http://todomvc.com">itcast</a></p>
         <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
     </footer>
+    <script src="./js/angular.js"></script>
     <script src="js/app.js"></script>
 </body>
 
