--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </header>
         <!-- This section should be hidden by default and shown when there are todos -->
         <section class="main">
-            <input class="toggle-all" type="checkbox">
+            <input class="toggle-all" type="checkbox" ng-model="isCheckAll" ng-click="checkAll()">
             <label for="toggle-all">Mark all as complete</label>
             <ul class="todo-list">
                 <!-- These are here just to show the structure of the list items -->
@@ -41,7 +41,7 @@
         <!-- This footer should hidden by default and shown when there are todos -->
         <footer class="footer">
             <!-- This should be `0 items left` by default -->
-            <span class="todo-count"><strong>0</strong> item left</span>
+            <span class="todo-count"><strong>{{getItem()}}</strong> item left</span>
             <!-- Remove this if you don't implement routing -->
             <ul class="filters">
                 <li>
@@ -55,7 +55,7 @@
                 </li>
             </ul>
             <!-- Hidden if no completed items are left ↓ -->
-            <button class="clear-completed" ng-click="clearCompleted()">Clear completed</button>
+            <button class="clear-completed" ng-click="clearCompleted()" ng-show="isShow()">Clear completed</button>
         </footer>
     </section>
     <footer class="info">
